Add rest endpoint to query for all subjects supported by a model.
